# fast-helmpy

./: .gitignore  BENCHMARKS.md  HYBRID_MODE_DESIGN.md  IMPROVEMENT_PLAN.md  KNOWN_ISSUES.md  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml  release.yml
benchmark/: benchmark_helm.py
fast_helmpy/: __init__.py  api.py
fast_helmpy/core/: __init__.py  classes.py  helm.py  nr.py  nr_ds.py
helmpy/: __init__.py  api.py
helmpy/core/: __init__.py  analytic_continuation.py  classes.py  helm.py
test/: conftest.py  paths.py  test_api.py  test_helmpy.py  test_helmpy_nr.py
