[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-helmpy"
version = "0.4.0"
description = "Fast, vectorized power flow solvers including the Holomorphic Embedding Load Flow Method (HELM)"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.9"
authors = [
    { name = "Tulio Molina" },
    { name = "Juan José Ortega" },
]
maintainers = [
    { name = "Mike Vogt" },
]
keywords = ["power flow", "load flow", "HELM", "holomorphic embedding", "power systems"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
# xlsx case loading and result writing (create_case_data_object_from_xlsx,
# save_results) and the Newton-Raphson solvers
xlsx = ["pandas", "openpyxl"]
test = ["pytest", "pandas", "openpyxl"]

[project.urls]
Homepage = "https://github.com/e2nIEE/fast-helmpy"
Fork-of = "https://github.com/vogt31337/HELMpy"
Upstream = "https://github.com/HELMpy/HELMpy"

[tool.setuptools.packages.find]
include = ["fast_helmpy*"]
